crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-on_zero_results_small_clickbench_q36_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q36"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                               |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                                                                                 |
|               |   Projection: hits.ClientIP, __common_expr_1 - Int64(1) AS hits.ClientIP - Int64(1), __common_expr_1 - Int64(2) AS hits.ClientIP - Int64(2), __common_expr_1 - Int64(3) AS hits.ClientIP - Int64(3), count(Int64(1)) AS c          |
|               |     Projection: CAST(hits.ClientIP AS Int64) AS __common_expr_1, hits.ClientIP, count(Int64(1))                                                                                                                                    |
|               |       Aggregate: groupBy=[[hits.ClientIP]], aggr=[[count(Int64(1))]]                                                                                                                                                               |
|               |         TableScan: hits projection=[ClientIP]                                                                                                                                                                                      |
| physical_plan | SortPreservingMergeExec: [c@4 DESC], fetch=10                                                                                                                                                                                      |
|               |   SortExec: TopK(fetch=10), expr=[c@4 DESC], preserve_partitioning=[true]                                                                                                                                                          |
|               |     ProjectionExec: expr=[ClientIP@1 as ClientIP, __common_expr_1@0 - 1 as hits.ClientIP - Int64(1), __common_expr_1@0 - 2 as hits.ClientIP - Int64(2), __common_expr_1@0 - 3 as hits.ClientIP - Int64(3), count(Int64(1))@2 as c] |
|               |       ProjectionExec: expr=[CAST(ClientIP@0 AS Int64) as __common_expr_1, ClientIP@0 as ClientIP, count(Int64(1))@1 as count(Int64(1))]                                                                                            |
|               |         AggregateExec: mode=FinalPartitioned, gby=[ClientIP@0 as ClientIP], aggr=[count(Int64(1))]                                                                                                                                 |
|               |           RepartitionExec: partitioning=Hash([ClientIP@0], 32), input_partitions=32                                                                                                                                                |
|               |             AggregateExec: mode=Partial, gby=[ClientIP@0 as ClientIP], aggr=[count(Int64(1))]                                                                                                                                      |
|               |               RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                |
|               |                 SchemaCastScanExec                                                                                                                                                                                                 |
|               |                   FallbackOnZeroResultsScanExec                                                                                                                                                                                    |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                              |
|               |                       BytesProcessedExec                                                                                                                                                                                           |
|               |                         EmptyExec                                                                                                                                                                                                  |
|               |                                                                                                                                                                                                                                    |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
