crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-on_zero_results_small_clickbench_q37_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q37"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: PageViews DESC NULLS FIRST, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   Projection: hits.URL, count(Int64(1)) AS PageViews                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |     Aggregate: groupBy=[[hits.URL]], aggr=[[count(Int64(1))]]                                                                                                                                                                                                                                                                                                                                                                                               |
|               |       Projection: hits.URL                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |         Filter: hits.URL != LargeBinary("") AND hits.CounterID = Int32(62) AND hits.DontCountHits = Int16(0) AND hits.IsRefresh = Int16(0) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None)                                                                                |
|               |           TableScan: hits projection=[EventDate, CounterID, URL, IsRefresh, DontCountHits], partial_filters=[hits.URL != LargeBinary(""), hits.CounterID = Int32(62), hits.DontCountHits = Int16(0), hits.IsRefresh = Int16(0), to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1372636800000000000, None), to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1375228800000000000, None)] |
| physical_plan | SortPreservingMergeExec: [PageViews@1 DESC], fetch=10                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |   ProjectionExec: expr=[URL@0 as URL, count(Int64(1))@1 as PageViews]                                                                                                                                                                                                                                                                                                                                                                                       |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                   |
|               |       AggregateExec: mode=FinalPartitioned, gby=[URL@0 as URL], aggr=[count(Int64(1))]                                                                                                                                                                                                                                                                                                                                                                      |
|               |         RepartitionExec: partitioning=Hash([URL@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                                                                                                                |
|               |           AggregateExec: mode=Partial, gby=[URL@0 as URL], aggr=[count(Int64(1))]                                                                                                                                                                                                                                                                                                                                                                           |
|               |             FilterExec: URL@2 !=  AND CounterID@1 = 62 AND DontCountHits@4 = 0 AND IsRefresh@3 = 0 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) >= 1372636800000000000 AND to_timestamp(CAST(EventDate@0 AS Int64) * 86400) <= 1375228800000000000, projection=[URL@2]                                                                                                                                                                              |
|               |               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                         |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |                   FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |                     CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                                                                                                                                                                                                                                                                                       |
|               |                       BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |                         EmptyExec                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
